compiler/testData/diagnostics/tests/enum/referenceToEnumEntry.fir.kt
enum class My { V }

fun test() {
    val ref = My::<!UNSUPPORTED!>V<!>
}
